--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,6 +1,11 @@
 /*
 You dont really need this but its implements random stuff
 */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
