--- a/app/src/index.css
+++ b/app/src/index.css
@@ -6,6 +6,15 @@ You dont really need this but its implements random stuff
 @tailwind components;
 @tailwind utilities;
 
+
+
+/* 
+Google Fonts 
+*/
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&family=Montserrat:wght@200;400;500;600;700&display=swap');
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
